# FEFU-smart-campus

./: .gitignore  README.md  docker-compose.yml
backend/: enums.py  lifespan.py  main.py  pyproject.toml  schema.py
backend/db/: dependencies.py  utils.py
backend/db/dao/: audience_dao.py  device_dao.py  incidents_dao.py  normal_values_dao.py  records_dao.py
backend/db/models/: audiences.py  base.py  devices.py  incidents.py  normal_values.py  records.py
backend/deploy/: Dockerfile  docker-compose.yml
backend/services/: handler.py  tasks.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.js
frontend/src/components/: ArchiveTable.js  AudienceCard.js  DetectorItem.js  DetectorTable.js  IncidentItem.js  IncidentsTable.js  SubItems.js  Switch.js  ValuesItem.jsx  ValuesTable.js
frontend/src/pages/: AudienceInfo.js  Audiences.js  Incidents.js
