[tool.poetry]
name = "sensors-api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
greenlet = "^3.0.0"
aiohttp = "^3.8.6"
taskiq = "^0.10.2"
taskiq-aio-pika = "^0.4.0"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"

[tool.poetry.group.dev.dependencies]
SQLAlchemy = "^2.0.22"
fastapi = "^0.104.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
